Fixed overheadmessage z-index

--- a/collaborative/src/components/OverHeadMessage/OverHeadMessage.module.css
+++ b/collaborative/src/components/OverHeadMessage/OverHeadMessage.module.css
@@ -7,6 +7,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  z-index: 101;
 }
 
 .Item {
@@ -15,8 +16,10 @@
   background-color: white;
   text-decoration: none;
   color: black;
+  z-index: 101;
 }
 
 .Item:hover {
   background-color: rgb(241, 241, 241);
+  z-index: 101;
 }
